# otool_esptool_ui

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  __init__.py  __main__.py  config.yaml  esp32p4_burn_efuse_config_example.yaml  management_tools.ps1  otool_esptool_ui.py  otool_esptool_ui.spec  pyproject.toml  requirements.txt
firmware/: README.md
src/: __init__.py  bootstrap.py  constants.py  device_card.py  dialog_memory.py  efuse_batch_dialog.py  efuse_dialog.py  export_dialog.py  flow_layout.py  helpers.py  jump_list.py  main_window.py  merge_split_widget.py  models.py  styles.py  verify_plan.py  verify_visual_editor.py  verify_widget.py
tests/: test_constants.py  test_verify_plan.py
